--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,43 +1,1 @@
-# This file controls the behavior of Trunk: https://docs.trunk.io/cli
-# To learn more about the format of this file, see https://docs.trunk.io/reference/trunk-yaml
-version: 0.1
-cli:
-  version: 1.22.10
-# Trunk provides extensibility via plugins. (https://docs.trunk.io/plugins)
-plugins:
-  sources:
-    - id: trunk
-      ref: v1.6.7
-      uri: https://github.com/trunk-io/plugins
-# Many linters and tools depend on runtimes - configure them here. (https://docs.trunk.io/runtimes)
-runtimes:
-  enabled:
-    - go@1.21.0
-    - node@18.20.5
-    - python@3.10.8
-    # - ruby@3.1.4 # use system ruby
-# This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
-lint:
-  enabled:
-    - actionlint@1.7.7
-    - brakeman@5.4.0
-    - checkov@3.2.378
-    - git-diff-check
-    - hadolint@2.12.1-beta
-    - markdownlint@0.44.0
-    - osv-scanner@1.9.2
-    - prettier@3.5.2
-    - rubocop:
-        packages:
-          - rubocop-rails
-          - rubocop-rails-omakase
-    - shellcheck@0.10.0
-    - shfmt@3.6.0
-    - trufflehog@3.88.14
-    - yamllint@1.35.1
-actions:
-  enabled:
-    - trunk-announce
-    - trunk-check-pre-push
-    - trunk-fmt-pre-commit
-    - trunk-upgrade-available
+../.linters/trunk.yaml
