--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,10 +1,2 @@
-plugins:
-  - rubocop-rails
-
-# Omakase Ruby styling for Rails
-inherit_gem: { rubocop-rails-omakase: rubocop.yml }
-# Overwrite or add rules to create your own house style
-#
-# # Use `[a, [b, c]]` not `[ a, [ b, c ] ]`
-# Layout/SpaceInsideArrayLiteralBrackets:
-#   Enabled: false
+inherit_from:
+  - .trunk/configs/.rubocop.yml
