--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -20,6 +20,7 @@ runtimes:
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
   enabled:
+    - renovate@39.182.3
     - oxipng@9.1.4
     - svgo@3.3.2
     - actionlint@1.7.7
