--- a/.trunk/configs/.rubocop.yml
+++ b/.trunk/configs/.rubocop.yml
@@ -1,6 +1,9 @@
 plugins:
   - rubocop-rails
 
+require:
+  - rubocop-haml
+
 # Omakase Ruby styling for Rails
 inherit_gem: { rubocop-rails-omakase: rubocop.yml }
 # Overwrite or add rules to create your own house style
@@ -8,3 +11,8 @@ inherit_gem: { rubocop-rails-omakase: rubocop.yml }
 # # Use `[a, [b, c]]` not `[ a, [ b, c ] ]`
 # Layout/SpaceInsideArrayLiteralBrackets:
 #   Enabled: false
+
+inherit_mode:
+  merge:
+    - Include
+    - Exclude
