--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -20,13 +20,14 @@ runtimes:
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
   enabled:
+    - taplo@0.9.3
     - haml-lint
-    - renovate@39.185.0
+    - renovate@39.188.3
     - oxipng@9.1.4
     - svgo@3.3.2
     - actionlint@1.7.7
     - brakeman@5.4.0
-    - checkov@3.2.379
+    - checkov@3.2.382
     - git-diff-check
     - hadolint@2.12.1-beta
     - markdownlint@0.44.0
@@ -39,7 +40,7 @@ lint:
           - rubocop-rails-omakase
     - shellcheck@0.10.0
     - shfmt@3.6.0
-    - trufflehog@3.88.14
+    - trufflehog@3.88.15
     - yamllint@1.35.1
   ignore:
     - linters:
