--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -19,10 +19,11 @@ runtimes:
     # - ruby@3.1.4 # use system ruby
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
+  disabled:
+    - renovate
   enabled:
     - taplo@0.9.3
     - haml-lint
-    - renovate@39.188.3
     - oxipng@9.1.4
     - svgo@3.3.2
     - actionlint@1.7.7
