--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,23 +1,18 @@
-# This file controls the behavior of Trunk: https://docs.trunk.io/cli
-# To learn more about the format of this file, see https://docs.trunk.io/reference/trunk-yaml
+---
 version: 0.1
 cli:
   version: 1.22.10
-# Trunk provides extensibility via plugins. (https://docs.trunk.io/plugins)
 plugins:
   sources:
     - id: trunk
       ref: v1.6.7
       uri: https://github.com/trunk-io/plugins
-# Many linters and tools depend on runtimes - configure them here. (https://docs.trunk.io/runtimes)
 runtimes:
   enabled:
     - ruby@3.1.4
     - go@1.21.0
     - node@18.20.5
     - python@3.10.8
-    # - ruby@3.1.4 # use system ruby
-# This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
   disabled:
     - renovate
@@ -54,3 +49,15 @@ actions:
     - trunk-check-pre-push
     - trunk-fmt-pre-commit
     - trunk-upgrade-available
+    - git-lfs
+  definitions:
+    - id: git-lfs
+      display_name: Git LFS
+      description: Git LFS hooks
+      run: git lfs "${hook}" "${@}"
+      triggers:
+        - git_hooks:
+            - post-checkout
+            - post-commit
+            - post-merge
+            - pre-push
