🔧 Update mise.toml configuration with consistent quote style and Ruby version
Changed double quotes to single quotes throughout the mise.toml file for
consistency in string formatting. Updated Ruby version from 3.4.2 to 3.4.3
to use the latest patch version with bug fixes and improvements.

--- a/mise.toml
+++ b/mise.toml
@@ -1,11 +1,11 @@
 [env]
-MULTIPOST_MISE_ACTIVE = "true"
+MULTIPOST_MISE_ACTIVE = 'true'
 
 [settings]
 env_file = '.env'
 
 [tools]
-ruby = '3.4.2'
+ruby = '3.4.3'
 
 [tasks]
-build = ["bundle install", "bundle exec rake build"]
+build = ['bundle install', 'bundle exec rake build']
