🔧 Add configuration files and update gitignore
Added .env.example file as a template for environment variables, updated
.gitignore to exclude Cursor AI rules and explicitly include .env.example,
disabled rails-test in trunk.yaml, and added basic VSCode settings.

These changes improve the development setup by providing a template for
environment configuration, ensuring sensitive files aren't committed, and
adjusting tooling configurations to better match the project's needs.

--- a/.gitignore
+++ b/.gitignore
@@ -62,9 +62,13 @@ node_modules/
 pickle-email-*.html
 rerun.txt
 yarn-debug.log*
+!.env.example
 !/app/assets/builds/.keep
 !/log/.keep
 !/storage/.keep
 !/tmp/.keep
 !/tmp/pids/.keep
 !/tmp/storage/.keep
+
+#Ignore cursor AI rules
+.cursor/rules/codacy.mdc
