🎨 format: standardize code style with double quotes and consistent indentation
The commit updates various configuration and source files to use a consistent
code style throughout the project. All single quotes have been replaced with
double quotes, and indentation has been standardized to use tabs instead of
spaces. This improves code readability and maintains a uniform style across
the codebase. Additionally, the SPEC.md file has been removed as it's no
longer needed.

🎨 Format JavaScript files with consistent style using double quotes and tabs

The commit standardizes code formatting across all JavaScript files in the project by applying consistent style rules. All files now use double quotes for strings and tab indentation instead of spaces. The biome.json configuration file has been updated from a symlink to a proper file that extends the trunk configuration. This improves code readability and maintainability by ensuring a consistent style throughout the codebase.

--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -78,7 +78,10 @@ lint:
     - hadolint@2.12.1-beta
     - osv-scanner@2.0.2
     - oxipng@9.1.5
-    - rubocop
+    - rubocop:
+        packages:
+          - rubocop-rails
+          - rubocop-rails-omakase
     - shellcheck@0.10.0
     - shfmt@3.6.0
     - svgo@3.3.2
