🔧 Configure Ruby code style and linting tools
This commit adds comprehensive Ruby code style configuration and linting tools to the project. The changes include:

1. Adding `frozen_string_literal: true` and `typed: false` headers to all Ruby files to improve performance and prepare for type checking
2. Configuring RuboCop with custom rules in `.rubocop.yml` instead of inheriting from `rubocop-rails-omakase`
3. Adding multiple RuboCop plugins for specialized linting (capybara, minitest, performance, rails, rake, rspec, sorbet, thread_safety)
4. Fixing style issues across the codebase:
   - Using double quotes consistently
   - Improving array syntax with %i notation
   - Fixing line length and method complexity metrics
   - Standardizing whitespace and indentation
   - Replacing STDOUT with $stdout for standard streams
   - Fixing Regexp.last_match usage

The changes improve code quality, maintainability, and prepare the codebase for better static analysis and type checking with Sorbet.

--- a/.trunk/configs/.rubocop.yml
+++ b/.trunk/configs/.rubocop.yml
@@ -1,7 +1,44 @@
-inherit_gem:
-  rubocop-rails-omakase: rubocop.yml
+# inherit_gem:
+#   rubocop-rails-omakase: rubocop.yml
+plugins:
+  - rubocop-capybara
+  - rubocop-minitest
+  - rubocop-performance
+  - rubocop-rails
+  - rubocop-rake
+  - rubocop-rspec
+  - rubocop-sorbet
+  - rubocop-thread_safety
 AllCops:
   TargetRubyVersion: 3.4
   Exclude:
     - .vscode/**
     - .git/**
+Style/StringLiterals:
+  Enabled: true
+  EnforcedStyle: double_quotes
+Style/StringLiteralsInInterpolation:
+  Enabled: true
+  EnforcedStyle: double_quotes
+Layout/LineLength:
+  Max: 120
+Metrics/MethodLength:
+  Max: 20
+Metrics/AbcSize:
+  Max: 50
+Metrics/CyclomaticComplexity:
+  Max: 10
+Metrics/PerceivedComplexity:
+  Max: 10
+Metrics/BlockLength:
+  # Configuration parameters: CountComments, CountAsOne, AllowedMethods, AllowedPatterns.
+  # AllowedMethods: refine
+  Max: 117
+Style/Documentation:
+  # Configuration parameters: AllowedConstants.
+  Exclude:
+    - app/controllers/application_controller.rb
+    - app/helpers/application_helper.rb
+    - app/mailers/application_mailer.rb
+    - app/models/application_record.rb
+    - config/application.rb
