--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "app",
   "private": true,
   "scripts": {
+    "build": "bun run build:js",
     "build:js": "bun bun.config.js",
-    "build:css": "postcss ./app/assets/stylesheets/application.postcss.css -o ./app/assets/builds/application.css"
+    "build:css": "bun run postcss ./app/assets/stylesheets/application.postcss.css -o ./app/assets/builds/application.css"
   },
   "dependencies": {
     "@biomejs/biome": "^1.9.4",
