--- a/.trunk/configs/.rubocop.yml
+++ b/.trunk/configs/.rubocop.yml
@@ -1,5 +1,46 @@
+# Rubocop configuration
+
 # inherit_gem:
 #   rubocop-rails-omakase: rubocop.yml
+
+AllCops:
+  Exclude:
+    - .vscode/**
+    - .git/**
+  TargetRubyVersion: 3.4
+Layout/LineLength:
+  Max: 120
+Metrics/AbcSize:
+  Max: 50
+Metrics/BlockLength:
+  Max: 117
+Metrics/CyclomaticComplexity:
+  Max: 10
+Metrics/MethodLength:
+  Max: 20
+Metrics/PerceivedComplexity:
+  Max: 10
+Style/Documentation:
+  Exclude:
+    - app/controllers/application_controller.rb
+    - app/helpers/application_helper.rb
+    - app/mailers/application_mailer.rb
+    - app/models/application_record.rb
+    - config/application.rb
+    - test/application_system_test_case.rb
+    - test/test_helper.rb
+Style/StringLiterals:
+  Enabled: true
+  EnforcedStyle: double_quotes
+Style/StringLiteralsInInterpolation:
+  Enabled: true
+  EnforcedStyle: double_quotes
+ThreadSafety/ClassInstanceVariable:
+  Exclude:
+    - bin/bundle
+ThreadSafety/DirChdir:
+  Exclude:
+    - bin/setup
 plugins:
   - rubocop-capybara
   - rubocop-minitest
@@ -9,36 +50,3 @@ plugins:
   - rubocop-rspec
   - rubocop-sorbet
   - rubocop-thread_safety
-AllCops:
-  TargetRubyVersion: 3.4
-  Exclude:
-    - .vscode/**
-    - .git/**
-Style/StringLiterals:
-  Enabled: true
-  EnforcedStyle: double_quotes
-Style/StringLiteralsInInterpolation:
-  Enabled: true
-  EnforcedStyle: double_quotes
-Layout/LineLength:
-  Max: 120
-Metrics/MethodLength:
-  Max: 20
-Metrics/AbcSize:
-  Max: 50
-Metrics/CyclomaticComplexity:
-  Max: 10
-Metrics/PerceivedComplexity:
-  Max: 10
-Metrics/BlockLength:
-  # Configuration parameters: CountComments, CountAsOne, AllowedMethods, AllowedPatterns.
-  # AllowedMethods: refine
-  Max: 117
-Style/Documentation:
-  # Configuration parameters: AllowedConstants.
-  Exclude:
-    - app/controllers/application_controller.rb
-    - app/helpers/application_helper.rb
-    - app/mailers/application_mailer.rb
-    - app/models/application_record.rb
-    - config/application.rb
