--- a/mise.toml
+++ b/mise.toml
@@ -9,7 +9,7 @@ asdf_compat = false
 [tools]
 ruby = { version = '3.4.3' }
 bun = { version = '1.2.13' }
-node = { version = '22.15.0' }
+node = { version = 'lts' }
 
 [tasks]
 'db:reset' = { run = [
