--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
     "stylelint-config-tailwindcss": "^1.0.0",
     "tailwindcss": "^4.1.6"
   },
-  "trustedDependencies": ["@biomejs/biome", "@tailwindcss/oxide"]
+  "trustedDependencies": [
+    "@biomejs/biome",
+    "@tailwindcss/oxide"
+  ],
+  "engines": {
+    "bun": "~1.2.13",
+    "node": "~lts"
+  }
 }
