--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,26 +1,30 @@
 version: 2
 updates:
+  - package-ecosystem: bun
+    directory: /
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 100
+    assignees:
+      - daveio
   - package-ecosystem: docker
     directory: /
     schedule:
       interval: daily
+    open-pull-requests-limit: 100
     assignees:
       - daveio
   - package-ecosystem: github-actions
     directory: /
     schedule:
       interval: daily
+    open-pull-requests-limit: 100
     assignees:
       - daveio
   - package-ecosystem: npm
     directory: /
     schedule:
       interval: daily
-    assignees:
-      - daveio
-  - package-ecosystem: bun
-    directory: /
-    schedule:
-      interval: daily
+    open-pull-requests-limit: 100
     assignees:
       - daveio
