🔧 add bundler ecosystem to dependabot configuration
Added Ruby bundler package ecosystem to dependabot.yml to automate dependency updates for Ruby gems in the project. This ensures that Ruby dependencies will be monitored daily for updates, with pull requests assigned to daveio, matching the configuration of other ecosystems in the project.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -28,3 +28,10 @@ updates:
     open-pull-requests-limit: 100
     assignees:
       - daveio
+  - package-ecosystem: bundler
+    directory: /
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 100
+    assignees:
+      - daveio
