--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,9 +1,9 @@
 name: ci
 permissions:
   contents: read
-on:
-  pull_request:
-  push:
+"on":
+  pull_request: null
+  push: null
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -16,19 +16,17 @@ jobs:
       - name: apt
         run: sudo apt-get update && sudo apt-get install --no-install-recommends -y build-essential git libyaml-dev node-gyp pkg-config python-is-python3 google-chrome-stable
       - name: checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@85e6279cec87321a52edac9c87bce653a07cf6c2
       - name: mise
-        uses: jdx/mise-action@v2
+        uses: jdx/mise-action@c94f0bf9e520b150e34c017db785461f7e71c5fb
       - name: prepare-ci
         run: bin/mise run prepare-ci
       - name: ci:brakeman
         run: bin/mise run ci:brakeman
       - name: ci:rubocop
         run: bin/mise run ci:rubocop
-      # - name: ci:test
-      #   run: bin/mise run ci:test
       - name: artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@6027e3dd177782cd8ab9af838c04fd81a07f1d47
         if: failure()
         with:
           name: screenshots
