🔧 configure dependabot to group all dependency updates together
Updated dependabot.yml to group all dependency updates into a single pull
request for each package ecosystem (npm, docker, github-actions, bundler).
This reduces PR noise and makes dependency management more efficient by
consolidating related changes.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,10 @@ updates:
     open-pull-requests-limit: 100
     assignees:
       - daveio
+    groups:
+      all-dependencies:
+        patterns:
+          - "*"
   - package-ecosystem: docker
     directory: /
     schedule:
@@ -14,6 +18,10 @@ updates:
     open-pull-requests-limit: 100
     assignees:
       - daveio
+    groups:
+      all-dependencies:
+        patterns:
+          - "*"
   - package-ecosystem: github-actions
     directory: /
     schedule:
@@ -21,6 +29,10 @@ updates:
     open-pull-requests-limit: 100
     assignees:
       - daveio
+    groups:
+      all-dependencies:
+        patterns:
+          - "*"
   - package-ecosystem: npm
     directory: /
     schedule:
@@ -28,6 +40,10 @@ updates:
     open-pull-requests-limit: 100
     assignees:
       - daveio
+    groups:
+      all-dependencies:
+        patterns:
+          - "*"
   - package-ecosystem: bundler
     directory: /
     schedule:
@@ -35,3 +51,7 @@ updates:
     open-pull-requests-limit: 100
     assignees:
       - daveio
+    groups:
+      all-dependencies:
+        patterns:
+          - "*"
