--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@biomejs/biome",
     "@tailwindcss/oxide"
   ],
+  "packageManager": "bun@1.2.17",
   "engines": {
     "bun": "1.2.17",
     "node": "22.17.0"
