--- a/package.json
+++ b/package.json
@@ -1,13 +1,6 @@
 {
-  "name": "app",
-  "private": true,
-  "scripts": {
-    "build": "bun run build:js",
-    "build:js": "bun bun.config.js",
-    "build:css": "bun run postcss ./app/assets/stylesheets/application.postcss.css -o ./app/assets/builds/application.css"
-  },
   "dependencies": {
-    "@biomejs/biome": "^2.0.6",
+    "@biomejs/biome": "^2.1.3",
     "@catppuccin/daisyui": "^2.1.1",
     "@catppuccin/palette": "^1.7.1",
     "@catppuccin/tailwindcss": "^1.0.0",
@@ -15,7 +8,7 @@
     "@hotwired/turbo-rails": "^8.0.16",
     "@tailwindcss/postcss": "^4.1.11",
     "autoprefixer": "^10.4.21",
-    "daisyui": "^5.0.43",
+    "daisyui": "^5.0.50",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
     "postcss-import": "^16.1.1",
@@ -24,13 +17,20 @@
     "stylelint-config-tailwindcss": "^1.0.0",
     "tailwindcss": "^4.1.11"
   },
+  "engines": {
+    "bun": "^1.2.19",
+    "node": "^22.18.0"
+  },
+  "name": "app",
+  "packageManager": "bun@1.2.19",
+  "private": true,
+  "scripts": {
+    "build": "bun run build:js",
+    "build:css": "bun run postcss ./app/assets/stylesheets/application.postcss.css -o ./app/assets/builds/application.css",
+    "build:js": "bun bun.config.js"
+  },
   "trustedDependencies": [
     "@biomejs/biome",
     "@tailwindcss/oxide"
-  ],
-  "packageManager": "bun@1.2.17",
-  "engines": {
-    "bun": "1.2.17",
-    "node": "22.17.0"
-  }
+  ]
 }
